refactor: 이름 수정, 메서드 분할, 로직 변경