@@ -1,6 +1,7 @@
 package ladder.domain;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,13 +17,13 @@ public class ResultsOfPlayers {
     public Result getResultByName(String name) {
         Result result = resultsOfPlayers.get(new Player(new Name(name)));
         if (result == null) {
-            throw new IllegalArgumentException("존재하지 않는 사용자입니다.");
+            throw new IllegalArgumentException("존재하지 않는 사용자입니다: %s".formatted(name));
         }
         return result;
     }
 
-    public Map<Player, Result> getAllResults() {
-        return Map.copyOf(resultsOfPlayers);
+    public Map<Player, Result> getResultsOfPlayers() {
+        return Collections.unmodifiableMap(resultsOfPlayers);
     }
 
     private void initialize(Players players, Ladder ladder, Results results) {
